# Idris2

./: .gitignore  CMakeLists.txt  README.md  RUNNING_TESTS.md  bootstrap-stage1-chez.ps1  bootstrap-stage1-racket.ps1  bootstrap-stage2.ps1  in  out  out.txt  test_input.txt  test_repl_input.txt  test_repl_output.txt
.github/: copilot-instructions.md
cmake/: InstallIdris2.cmake  InstallIdris2.in.cmake
libs/test/Test/: Golden.idr
src/Compiler/Scheme/: Chez.idr  Gambit.idr  Racket.idr
src/Idris/: CommandLine.idr  Package.idr  REPL.idr  SetOptions.idr
src/Idris/REPL/: Common.idr  Opts.idr
support/c/: CMakeLists.txt  getline.c  getline.h  idris_directory.c  idris_file.c  idris_file.h  idris_signal.c  idris_support.c  idris_util.h
tests/: testutils.ps1
tests/idris2/basic/basic001/: expected  expected_ro
tests/idris2/basic/basic002/: expected_ro
tests/idris2/basic/basic003/: expected_ro
tests/idris2/basic/basic004/: expected_ro
tests/idris2/basic/basic005/: expected_ro
tests/idris2/basic/basic006/: expected_ro
tests/idris2/basic/basic007/: expected_ro
tests/idris2/basic/basic008/: expected_ro
tests/idris2/basic/basic009/: expected_ro
tests/idris2/basic/basic010/: expected_ro
tools/: install-windows.ps1  run-ps-test.ps1  run-tests.ps1
